frontend&backend: feat: add password auth limit config
